--- a/superset/translations/mn/LC_MESSAGES/messages.json
+++ b/superset/translations/mn/LC_MESSAGES/messages.json
@@ -52,11 +52,11 @@
       "%s Selected (Virtual)": [""],
       "%s aggregates(s)": [""],
       "%s column(s)": [""],
-      "%s column(s) and metric(s)": [""],
+      "%s column(s) and metric(s)": ["Багана болон хэмжүүр"],
       "%s operator(s)": [""],
       "%s option": ["%s сонголт байна"],
       "%s option(s)": ["%s сонголт(ууд) байна"],
-      "%s saved metric(s)": [""],
+      "%s saved metric(s)": ["Хэмжүүр"],
       "%s%s": [""],
       "%s-%s of %s": [""],
       "(Removed)": [""],
@@ -153,7 +153,7 @@
       "Action Log": [""],
       "Actions": [""],
       "Active": [""],
-      "Actual time range": [""],
+      "Actual time range": ["Огнооны тохируулга"],
       "Adaptative formating": [""],
       "Add": [""],
       "Add Alert": [""],
@@ -181,7 +181,7 @@
       "Add annotation layer": [""],
       "Add dataset": [""],
       "Add delivery method": [""],
-      "Add filter": [""],
+      "Add filter": ["Шүүлтүүр нэмэх"],
       "Add item": [""],
       "Add metric": [""],
       "Add new color formatter": [""],
@@ -473,7 +473,7 @@
       "Batch editing %d filters:": [""],
       "Battery level over time": [""],
       "Be careful.": [""],
-      "Before": [""],
+      "Before": ["Өмнөх"],
       "Big Number": [""],
       "Big Number Font Size": [""],
       "Big Number with Trendline": [""],
@@ -504,7 +504,7 @@
       "By key: use column names as sorting key": [""],
       "By key: use row names as sorting key": [""],
       "By value: use metric values as sorting key": [""],
-      "CANCEL": [""],
+      "CANCEL": ["Цуцлах"],
       "CREATE TABLE AS": [""],
       "CREATE VIEW AS": [""],
       "CREATE VIEW statement": [""],
@@ -553,8 +553,8 @@
       "Cannot import dashboard: %(db_error)s.\nMake sure to create the database before importing the dashboard.": [
         ""
       ],
-      "Cannot load filter": [""],
-      "Cannot parse time string [%(human_readable)s]": [""],
+      "Cannot load filter": ["Шүүлтүүрийг ачааллахад алдаа гарлаа"],
+      "Огноог тохируулахад гарлаа [%(human_readable)s]": [""],
       "Categorical": [""],
       "Categories to group by on the x-axis.": [""],
       "Category": [""],
@@ -844,7 +844,7 @@
       "Cross Filter Scoping": [""],
       "Cross-filter scoping": [""],
       "Cumulative": [""],
-      "Custom": [""],
+      "Custom": ["Гараар"],
       "Custom Plugin": [""],
       "Custom Plugins": [""],
       "Custom SQL": [""],
@@ -958,8 +958,8 @@
         ""
       ],
       "Datetime format": [""],
-      "Day": [""],
-      "Days %s": [""],
+      "Day": ["Өдөр"],
+      "Days %s": ["Өдөр"],
       "Db engine did not return all queried columns": [""],
       "December": [""],
       "Decimal Character": [""],
@@ -1188,7 +1188,7 @@
       "Edit query": [""],
       "Edit template": [""],
       "Edit template parameters": [""],
-      "Edit time range": [""],
+      "Edit time range": ["Огнооны тохируулгыг засах"],
       "Edited": [""],
       "Editing 1 filter:": [""],
       "Editing filter set:": [""],
@@ -1440,8 +1440,8 @@
       "Horizontal alignment": [""],
       "Host": [""],
       "Hostname or IP address": [""],
-      "Hour": [""],
-      "Hours %s": [""],
+      "Hour": ["Цаг"],
+      "Hours %s": ["Цаг"],
       "Hours offset": [""],
       "How do you want to enter service account credentials?": [""],
       "How long to keep the logs around for this alert": [""],
@@ -1738,11 +1738,11 @@
         ""
       ],
       "Metric(s) {} must be aggregations.": [""],
-      "Metrics": [""],
+      "Metrics": ["Хэмжүүр"],
       "Metrics for which percentage of total are to be displayed. Calculated from only data within the row limit.": [
         ""
       ],
-      "Midnight": [""],
+      "Midnight": ["Шөнө дунд"],
       "Min": [""],
       "Min Periods": [""],
       "Min Width": [""],
@@ -1757,7 +1757,7 @@
       "Minimum value on the gauge axis": [""],
       "Minor Split Line": [""],
       "Minute": [""],
-      "Minutes %s": [""],
+      "Minutes %s": ["Минут"],
       "Missing Required Fields": [""],
       "Missing dataset": [""],
       "Mixed Time-Series": [""],
@@ -1765,9 +1765,9 @@
       "Modified %s": [""],
       "Modified by": [""],
       "Modified columns: %s": [""],
-      "Monday": [""],
-      "Month": [""],
-      "Months %s": [""],
+      "Monday": ["Даваа"],
+      "Month": ["Сар"],
+      "Months %s": ["Сар"],
       "More dataset related options": [""],
       "Move only": [""],
       "Moves the given set of dates by a specified interval.": [""],
@@ -1792,10 +1792,10 @@
       "Must have at least one numeric column specified": [""],
       "Must specify a value for filters with comparison operators": [""],
       "My column": [""],
-      "My metric": [""],
+      "My metric": ["Хэмжүүр"],
       "N/A": [""],
       "NOV": ["11 сар"],
-      "NOW": [""],
+      "NOW": ["Одоо"],
       "Name": [""],
       "Name is required": [""],
       "Name must be unique": [""],
@@ -1869,7 +1869,7 @@
       "Nothing triggered": [""],
       "Notification method": [""],
       "November": ["11 сар"],
-      "Now": ["11 сар"],
+      "Now": ["Одоо"],
       "Null or Empty": [""],
       "Null values": [""],
       "Number Format": [""],
@@ -1884,9 +1884,9 @@
       "Number of steps to take between ticks when displaying the Y scale": [""],
       "Numerical range": [""],
       "OCT": ["10 сар"],
-      "OK": [""],
+      "OK": ["Болсон"],
       "OVERWRITE": [""],
-      "October": ["1? сар"],
+      "October": ["10 сар"],
       "Offline": [""],
       "Offset": [""],
       "On Grace": [""],
@@ -1955,6 +1955,8 @@
       ],
       "Optional warning about use of this metric": [""],
       "Options": ["Сонголт"],
+      "%s options": ["%s сонголт"],
+      "%s option": ["%s сонголт"],
       "Or choose from a list of other databases we support:": [""],
       "Order by entity id": [""],
       "Order results by selected columns": [""],
@@ -2130,8 +2132,8 @@
       "Python Functions": [""],
       "Python datetime string pattern": [""],
       "Python functions": [""],
-      "Quarter": [""],
-      "Quarters %s": [""],
+      "Quarter": ["Хагас жил"],
+      "Quarters %s": ["Хагас жил"],
       "Query": [""],
       "Query %s: %s": [""],
       "Query A": [""],
@@ -2146,7 +2148,7 @@
       "Query search string": [""],
       "Query was stopped": [""],
       "Query was stopped.": [""],
-      "RANGE TYPE": [""],
+      "RANGE TYPE": ["Огнооны хүрээ"],
       "REPORT NAME ERROR": [""],
       "RGB Color": [""],
       "Radar": [""],
@@ -2210,7 +2212,7 @@
       ],
       "Relational": [""],
       "Relationships between community channels": [""],
-      "Relative Date/Time": [""],
+      "Relative Date/Time": ["Огноо/цагийг тохируулах"],
       "Relative period": [""],
       "Relative quantity": [""],
       "Remind me in 24 hours": [""],
@@ -2353,7 +2355,7 @@
       "Saved": [""],
       "Saved Queries": [""],
       "Saved expressions": [""],
-      "Saved metric": [""],
+      "Saved metric": ["Хадгалсан хэмжүүр"],
       "Saved queries": [""],
       "Saved queries could not be deleted.": [""],
       "Saved query not found.": [""],
@@ -2389,12 +2391,12 @@
       "Search box": [""],
       "Search by query text": [""],
       "Search...": [""],
-      "Second": [""],
+      "Second": ["Секунд"],
       "Secondary": [""],
       "Secondary Metric": [""],
       "Secondary y-axis format": [""],
       "Secondary y-axis title": [""],
-      "Seconds %s": [""],
+      "Seconds %s": ["Секунд"],
       "Secure Extra": [""],
       "Secure extra": [""],
       "Security": [""],
@@ -2492,7 +2494,7 @@
       "Show Less...": [""],
       "Show Log": [""],
       "Show Markers": [""],
-      "Show Metric": [""],
+      "Show Metric": ["Хэмжүүрийг харуулах"],
       "Show Metric Names": [""],
       "Show Observation": [""],
       "Show Range Filter": [""],
@@ -2606,7 +2608,7 @@
       "Source SQL": [""],
       "Source category": [""],
       "Spatial": [""],
-      "Specific Date/Time": [""],
+      "Specific Date/Time": ["Нэмэлт огноо тохируулах"],
       "Specify a schema (if database flavor supports this).": [""],
       "Specify duplicate columns as \"X.0, X.1\".": [""],
       "Specify the database version. This should be used with Presto in order to enable query cost estimation.": [
@@ -2624,7 +2626,7 @@
       "Start Review": [""],
       "Start angle": [""],
       "Start at (UTC)": [""],
-      "Start date excluded from time range": ["Эхлэх огноог тохируулна уу"],
+      "Start date included in time range": ["Эхлэх огноог тохируулна уу"],
       "Start y-axis at 0": [""],
       "Start y-axis at zero. Uncheck to start y-axis at minimum value in the data.": [
         ""
@@ -2704,7 +2706,7 @@
       "Template Name": [""],
       "Template parameters": [""],
       "Templated link, it's possible to include {{ metric }} or other values coming from the controls.": [
-        ""
+        "Хэмжүүр"
       ],
       "Temporal expression not supported for type: %(col_type)s": [""],
       "Terminate running queries when browser window closed or navigated to another page. Available for Presto, Hive, MySQL, Postgres and Snowflake databases.": [
@@ -3220,7 +3222,7 @@
       "Undefined": [""],
       "Undefined window for rolling operation": [""],
       "Undo?": [""],
-      "Unexpected error": [""],
+      "Unexpected error": ["Алдаа"],
       "Unexpected error occurred, please check your logs for details": [""],
       "Unexpected error: ": [""],
       "Unknown": [""],
@@ -3388,12 +3390,12 @@
       ],
       "Web": [""],
       "Wednesday": [""],
-      "Week": [""],
+      "Week": ["Долоо хоног"],
       "Week ending Saturday": [""],
       "Week starting Monday": [""],
       "Week starting Sunday": [""],
       "Week_ending Sunday": [""],
-      "Weeks %s": [""],
+      "Weeks %s": ["Долоо хоног"],
       "We’re having trouble loading these results. Queries are set to timeout after %s second.": [
         ""
       ],
@@ -3539,8 +3541,8 @@
       "Y Log Scale": [""],
       "Y bounds": [""],
       "YScale Interval": [""],
-      "Year": [""],
-      "Years %s": [""],
+      "Year": ["Жил"],
+      "Years %s": ["Жил"],
       "Yes": [""],
       "Yes, cancel": [""],
       "You are importing one or more charts that already exist. Overwriting might cause you to lose some of your work. Are you sure you want to overwrite?": [
